RESOLVED FIXED26783
REGRESSION (r45296): Subfolders not displayed in MobileMe iDisk Web App
https://bugs.webkit.org/show_bug.cgi?id=26783
Summary REGRESSION (r45296): Subfolders not displayed in MobileMe iDisk Web App
Rob
Reported 2009-06-28 12:28:30 PDT
When you log into Apple's MobileMe, and you click on the iDisk app, the folders, subfolders, and files do not show up at all. It works fine in Safari 4.0, but not in the latest version of webkit. I am pretty sure this worked in webkit last weekend, but I cannot be 100% certain.
Attachments
Make scroll{Width, Height} greater or equal to client{Width,Height} (3.70 KB, patch)
2009-06-28 19:12 PDT, mitz
simon.fraser: review+
Mark Rowe (bdash)
Comment 1 2009-06-28 14:49:49 PDT
mitz
Comment 2 2009-06-28 18:12:34 PDT
mitz
Comment 3 2009-06-28 19:12:03 PDT
Created attachment 31995 [details] Make scroll{Width, Height} greater or equal to client{Width,Height} Again, this is compatible with IE.
Simon Fraser (smfr)
Comment 4 2009-06-28 19:17:57 PDT
Comment on attachment 31995 [details] Make scroll{Width, Height} greater or equal to client{Width,Height} > Index: WebCore/rendering/RenderBox.cpp > =================================================================== > --- WebCore/rendering/RenderBox.cpp (revision 45331) > +++ WebCore/rendering/RenderBox.cpp (working copy) > @@ -254,7 +254,7 @@ int RenderBox::scrollWidth() const > return layer()->scrollWidth(); > // For objects with visible overflow, this matches IE. > if (style()->direction() == LTR) > - return rightmostPosition(true, false) - borderLeft(); > + return max(clientWidth() , rightmostPosition(true, false) - borderLeft()); Extra space here.
mitz
Comment 5 2009-06-28 19:56:34 PDT
Fixed in r45332.
Rob
Comment 6 2009-06-29 17:57:12 PDT
Looks like it is working again.
Note You need to log in before you can comment on or make changes to this bug.