WebCore:

Reviewed by Simon Fraser.

        - fix https://bugs.webkit.org/show_bug.cgi?id=26783
          <rdar://problem/7014543> REGRESSION (r45296): Subfolders not displayed
          in MobileMe iDisk Web App

        Test: added a case to fast/dom/Element/scrollWidth.html

        Ensure that scroll{Width, Height} is greater or equal to
        client{Width, Height}.

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::scrollWidth):
        (WebCore::RenderBox::scrollHeight):

LayoutTests:

        Reviewed by Simon Fraser.

        - add a test case for https://bugs.webkit.org/show_bug.cgi?id=26783
          <rdar://problem/7014543> REGRESSION (r45296): Subfolders not displayed
          in MobileMe iDisk Web App

        * fast/dom/Element/scrollWidth-expected.txt:
        * fast/dom/Element/scrollWidth.html:



Canonical link: https://commits.webkit.org/37017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45332 268f45cc-cd09-0410-ab3c-d52691b4dbfc